--- a/igniteap/templates/uifiles/about.html
+++ b/igniteap/templates/uifiles/about.html
@@ -11,8 +11,6 @@
                 <div class="page-header-content-inner">
                     <div class="page-header-content">
                         <h2>About Ignite</h2>
-                        <!-- <p>Businex always try to provide the best Business Solutions for Clinets
-                            to grow up their Business very sharply and smoothly.</p> -->
                     </div>
                 </div>
             </div>
@@ -21,41 +19,9 @@
 </div>
 <!--== End Page Header Area ==-->
 
-<!--== Start About Area Wrapper ==-->
-
-<!-- <div class="home-two-about-area">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-12 d-lg-none">
-                <figure class="about-thumb">
-                    <img src="{% static 'assets/img/about-2.webp" alt="Ignite-About"/>
-                </figure>
-            </div>
-
-            <div class="col-lg-6">
-                <div class="about-content about-content--2">
-                    
-                    <h2>About <span>IGNITE</span></h2>
-                    
-                    <p style="text-align: justify;"><strong>IGNITE</strong> isn't merely a word, nor is it just another event; it
-embodies a metaphor for igniting creativity, enthusiasm, and
-innovation. It represents a dynamic movement that unites
-the most brilliant minds and passionate problem-solvers
-from every corner of our state. This dynamic Ideathon is
-crafted to kindle your creative sparks, enabling you to turn
-visionary ideas into tangible solutions that can positively
-impact the lives of individuals, communities, and the future
-landscape as a whole.
-</p>
-                    <a href="about.html" class="btn-about">MORE DETAILS <i class="mdi mdi-chevron-double-right"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
 
 
-<div class="about-area-wrapper sm-top7" style="background-color: #ffffff;">
+<div class="about-area-wrapper mb-5  sm-top7" style="background-color: #ffffff;">
     <div class="container">
         <div class="row align-items-lg-center">
             
@@ -128,20 +94,7 @@ landscape as a whole.
                         </div>
                         
 
-                        
-                        <!-- <div class="testimonial-item">
-                            <div class="testimonial-thumb">
-                                <img src="{% static 'assets/img/testimonial/client-02.jpg" alt="Ignite"/>
-                            </div>
-
-                            <div class="testimonial-txt">
-                                <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/>
-                                <p>Very much happy with provide the best
-                                    Business Solutions for Clients to grow up
-                                    their Business very sharply.</p>
-                                <h5 class="client-name">Alex Tuntuni</h5>
-                            </div>
-                        </div> -->
+                      
                         
 
                         
@@ -284,174 +237,7 @@ landscape as a whole.
 <!--== End Service Area Wrapper ==-->
 
 
-<!-- <div class="feature-area-wrapper sm-top">
-    <div class="container">
-        <div class="row mtn-sm-40 mtn-md-5">
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/01.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Creative Team</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/02.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Best Service</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/03.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Online Support</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
-
-
-
-
-<!--== Start History Area Wrapper ==-->
-<!-- <div class="history-area bg-offwhite sp-y">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-12">
-                <div class="section-title mb-lg-0">
-                    <h6>Our History</h6>
-                    <h2>About <span>Social Cause</span> </h2>
-                    <p style="text-align: justify;"><strong>IGNITE</strong> Ideathon is more than just an event; it's a passionate call to action for positive social 
-                        change. At its core, IGNITE is driven by a powerful social cause, igniting the flames of 
-                        innovation and sparking transformative solutions to address pressing issues within our 
-                        communities. Our 
-                        IGNITE serves as a platform to address critical challenges, promote inclusivity, and drive 
-                        positive change in the following ways</p>
-                </div>
-            </div>
-
-            <div class="feature-area-wrapper sm-top3">
-                <div class="container">
-                    <div class="row mtn-sm-40 mtn-md-5">
-                        <div class="col-md-3">
-                            <div class="icon-box-item">
-                                <div class="icon-box__icon">
-                                    <img src="{% static 'assets/img/feature/01.png' %}" alt="Ignite-Feature"/>
-                                </div>
-                                <div class="icon-box__info">
-                                    <h5>Creative Team</h5>
-                                    <p>We have creative team, they always ready to help you. </p>
-                                </div>
-                            </div>
-                        </div>
-            
-                        <div class="col-md-3">
-                            <div class="icon-box-item">
-                                <div class="icon-box__icon">
-                                    <img src="{% static 'assets/img/feature/02.png' %}" alt="Ignite-Feature"/>
-                                </div>
-                                <div class="icon-box__info">
-                                    <h5>Best Service</h5>
-                                    <p>We have creative team, they always ready to help you. </p>
-                                </div>
-                            </div>
-                        </div>
-            
-                        <div class="col-md-3">
-                            <div class="icon-box-item">
-                                <div class="icon-box__icon">
-                                    <img src="{% static 'assets/img/feature/03.png' %}" alt="Ignite-Feature"/>
-                                </div>
-                                <div class="icon-box__info">
-                                    <h5>Online Support</h5>
-                                    <p>We have creative team, they always ready to help you. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="icon-box-item">
-                                <div class="icon-box__icon">
-                                    <img src="{% static 'assets/img/feature/03.png' %}" alt="Ignite-Feature"/>
-                                </div>
-                                <div class="icon-box__info">
-                                    <h5>Online Support</h5>
-                                    <p>We have creative team, they always ready to help you. </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-8">
-                <div class="history-content-wrap pl-5">
-                    <div class="row mtn-40">
-                        <div class="col-md-6">
-                            <div class="history-item">
-                                <h6>01</h6>
-                                <h3>Addressing Real-Time Issues</h3>
-                                <p>IGNITE invites participants to channel their innovative spirit 
-                                    toward solving real-time problems with innovative ideas. We focus on issues such as 
-                                    sustainability, infrastructure, technology, industries, and more, giving participants the 
-                                    opportunity to contribute meaningfully to these causes.</p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="history-item">
-                                <h6>02</h6>
-                                <h3>Fostering Collaboration</h3>
-                                <p>IGNITE encourages collaboration among diverse groups of 
-                                    participants, fostering a sense of unity and community. By working together, participants 
-                                    can create solutions that are both inclusive and effective.</p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="history-item">
-                                <h6>03</h6>
-                                <h3>Empowering Youth</h3>
-                                <p>IGNITE is dedicated to empowering young minds, giving them a 
-                                    platform to voice their ideas, concerns, and aspirations. We believe in the potential of youth 
-                                    to drive change and shape a brighter future.</p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="history-item">
-                                <h6>04</h6>
-                                <h3>Driving Innovation</h3>
-                                <p>Our IGNITE promotes a culture of innovation. By providing 
-                                    participants with the tools, resources, and mentorship needed to bring their ideas to life, 
-                                    IGNITE helps drive groundbreaking solutions that can make a difference.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!--== End History Area Wrapper ==-->
 
 <div class="about-area-wrapper sm-top">
     <div class="container">
@@ -512,11 +298,6 @@ landscape as a whole.
                             <h2 class="h5"><a href="">Project Expo</a></h2>
                             <p class="text-medium">A Project Expo is a platform for showcasing innovative projects and ideas, promoting 
                                 collaboration, and inspiring future innovations across various fields </p>
-    
-                            <!-- <div class="blog-meta">
-                                <a href="#">By: Albert Max</a>
-                                <a href="#">May 01, 2019</a>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -527,11 +308,6 @@ landscape as a whole.
                             <h2 class="h5"><a href="">Startup Expo</a></h2>
                             <p class="text-medium">A Startup Expo is an energetic event celebrating entrepreneurship and innovation, where 
                                 emerging businesses and startups showcase their offerings to a diverse audience. </p>
-    
-                            <!-- <div class="blog-meta">
-                                <a href="#">By: Mohin Smith</a>
-                                <a href="#">May 03, 2019</a>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -542,11 +318,6 @@ landscape as a whole.
                             <h2 class="h5"><a href="">Investor Pitch</a></h2>
                             <p class="text-medium">An Investor Pitch Event is a crucial occasion where startups pitch their business ideas to 
                                 potential investors.</p>
-    
-                            <!-- <div class="blog-meta">
-                                <a href="#">By: Mohin Smith</a>
-                                <a href="#">May 03, 2019</a>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -556,90 +327,11 @@ landscape as a whole.
                             <h2 class="h5"><a href="">Idea Pitch</a></h2>
                             <p class="text-medium">An Idea Pitch is a succinct presentation that introduces and advocates for a new concept or 
                                 project. </p>
-    
-                            <!-- <div class="blog-meta">
-                                <a href="#">By: Mohin Smith</a>
-                                <a href="#">May 03, 2019</a>
-                            </div> -->
                         </div>
                     </div>
                 </div>
     
-                <!-- <div class="col-md-6 col-lg-4">
-                    <div class="blog-item">
-                        <div class="blog-content">
-                            <h2 class="h5"><a href="blog-details.html">Corporate Conference 2019</a></h2>
-                            <p>We have great creative team they always ready
-                                to helped you. voluptatem quiase voluptase
-                                aspernatur auted fugit</p>
-    
-                            <div class="blog-meta">
-                                <a href="#">By: Raju Ahammad</a>
-                                <a href="#">May 04, 2019</a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-            </div>
-
-
-
-            <!-- <div class="row mtn-sm-60 mtn-md-5">
-                <div class="col-lg-6 mb-5">
-                    <div class="icon-box-item">
-                        <div class="icon-box__icon">
-                            <img src="{% static 'assets/img/feature/01.png' %}" alt="Businex-Feature"/>
-                        </div>
-                        <div class="icon-box__info">
-                            <h5>Project Expo</h5>
-                            <p>A Project Expo is a platform for showcasing innovative projects and ideas, promoting 
-                                collaboration, and inspiring future innovations across various fields </p>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-lg-6 mb-5">
-                    <div class="icon-box-item">
-                        <div class="icon-box__icon">
-                            <img src="{% static 'assets/img/feature/02.png' %}" alt="Businex-Feature"/>
-                        </div>
-                        <div class="icon-box__info">
-                            <h5>Startup Expo</h5>
-                            <p>A Startup Expo is an energetic event celebrating entrepreneurship and innovation, where 
-                                emerging businesses and startups showcase their offerings to a diverse audience. </p>
-                        </div>
-                    </div>
-                </div>
-
-
-
-    
-                <div class="col-lg-6 mb-5">
-                    <div class="icon-box-item">
-                        <div class="icon-box__icon">
-                            <img src="{% static 'assets/img/feature/03.png' %}" alt="Businex-Feature"/>
-                        </div>
-                        <div class="icon-box__info">
-                            <h5>Investor Pitch</h5>
-                            <p>An Investor Pitch Event is a crucial occasion where startups pitch their business ideas to 
-                                potential investors.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 mb-5">
-                    <div class="icon-box-item">
-                        <div class="icon-box__icon">
-                            <img src="{% static 'assets/img/feature/03.png' %}" alt="Businex-Feature"/>
-                        </div>
-                        <div class="icon-box__info">
-                            <h5>Idea Pitch</h5>
-                            <p>An Idea Pitch is a succinct presentation that introduces and advocates for a new concept or 
-                                project. </p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+             
 
         </div>
     </div>
