--- a/igniteap/templates/uifiles/speakers.html
+++ b/igniteap/templates/uifiles/speakers.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <!--== End Page Header Area ==-->
-<div class="team-page-area-wrapper bg-offwhite sp-y sm-top">
+<div class="team-page-area-wrapper bg-offwhite sp-y1 sm-top mb-5">
     <div class="container">
         <div class="row mtn-30">
             {% for item in speakers %}
