--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -139,7 +139,7 @@
 </div>
 
 
-<div class="about-area-wrapper sm-top7" >
+<div class="about-area-wrapper sm-top7 mb-5" >
     <div class="container">
         <div class="row align-items-lg-center">
             <div class="col-md-6 col-lg-7 order-1">
@@ -172,12 +172,10 @@
 </div>
 
 
-<div class="about-area-wrapper sm-top7" style="background-color: #f8f9fc;">
+<div class="about-area-wrapper sm-top77 " style="background-color: #f8f9fc;">
     <div class="container">
         <div class="row align-items-lg-center">
-            
-
-            <div class="col-md-6 col-lg-5 order-0 order-md-1">
+            <div class="col-md-6 col-lg-5 order-0 order-md-1 mb-5">
                 <figure class="about-thumb">
                     <img src="{% static 'assets/img/about-wission-talks.png' %}" style="border-radius: 5px;" alt="wissiontalks-About"/>
                 </figure>
@@ -185,7 +183,6 @@
             
             <div class="col-md-6 col-lg-7 order-1">
                 <div class="about-content">
-                    <!-- <h6>Our Services</h6> -->
                     <h2>About <span>WissionTalks</span></h2>
                     <p class="text-medium"><strong>WissionTalks</strong>, an initiative by "Wissionarie," is committed to reshaping the future of entrepreneurship by inspiring and guiding the young generation towards a purposeful vision. This platform nurtures passion and empowers it to evolve into thriving businesses. WissionTalks distinguishes itself in the ecosystem by blending quality and uniqueness.</p>
                 </div>
@@ -193,48 +190,7 @@
         </div>
     </div>
 </div>
-
-
-    <div class="container">
-        <div class="row mtn-sm-40 mtn-md-5">
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/01.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Creative Team</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/02.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Best Service</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/03.png' %}" alt="Ignite-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Online Support</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
+</div>
 <div class="service-area-wrapper sm-top-wt pb-5">
   
         <div class="container">
@@ -407,7 +363,7 @@
     </div>
 </div>
 
-<section class="section contact blog-sec-main bg-light pt-5" data-section="Service" >
+<section class="section contact blog-sec-main bg-light pt-5 mb-5" data-section="Service" >
     <div class="container">
       <div class="row">
         <div class="col-md-12 service-heading-section">
