fixed about section

--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -182,7 +182,7 @@
             </div>
             
             <div class="col-md-6 col-lg-7 order-1">
-                <div class="about-content">
+                <div class="about-content mb-5">
                     <h2>About <span>WissionTalks</span></h2>
                     <p class="text-medium"><strong>WissionTalks</strong>, an initiative by "Wissionarie," is committed to reshaping the future of entrepreneurship by inspiring and guiding the young generation towards a purposeful vision. This platform nurtures passion and empowers it to evolve into thriving businesses. WissionTalks distinguishes itself in the ecosystem by blending quality and uniqueness.</p>
                 </div>
