--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -165,7 +165,7 @@
                                     <script>
                                         document.write(new Date().getFullYear())
                                     </script>
-                                    All Rights Reserved by Ignite AP <br> Developed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a>
+                                    All Rights Reserved by Ignite AP <br> Crafted by <a href="https://dt7.agency/" target="_blank">Dt7.agency</a>
                                 </p>
                             </div>
                         </div>
